<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_tag">Add Tag</string>

    <string name="app_name">微风出行</string>
    <string name="common_loading_message">数据正在加载...</string>
    <string name="common_load_message">正在下载最新版本</string>
    <string name="common_empty_msg">Oops, failed to resolve data\nPlease hit the screen and try again~</string>
    <string name="common_error_msg">Oops, something wrong!\nPlease hit the screen and try again~</string>
    <string name="common_no_network_msg">No network connected!\nPlease hit the screen and try again after connecting~</string>
    <string name="no_sdcard">没有存储卡</string>
    <string name="no_network">网络不可用,请检查网络</string>
    <string name="sd_smallsize">存储空间不足</string>

    <string name="wx_protocol">使用微风出行,同意我们的用户协议</string>

    <string name="home_header_title">微风出行</string>
    <string name="home_header_order">我的订单</string>
    <string name="home_user_info">个人中心</string>
    <string name="pay_mode_title">支付选择</string>
    <string name="refund_ticket">退票</string>
    <string name="already_refund_ticket">已退票</string>
    <string name="about_copyright">Copyright &#169; 2016-2019 \n成都特洛伊科技有限公司</string>
    <string name="about_text">&#160;&#160;&#160;&#160;微风出行是由成都特洛伊科技有限公司，雄风道路运输集团，乘风智能有限公司联合开发。以乘客简单，便利出行为目标，励志打造运输行业用户出行完整生态链综合平台。其平台功能包括，购票，旅游，酒店，美食及金融产品。更多相关信息，请咨询平台热线电话。</string>
    <string name="tips_info_content_insurance">乘车意外险：\n
                1．	保险名称：《中国平安出行乘车意外险》\n
                2．	份数限制：每人每车最高可购买5份，未成年人限1份。\n
                3．	保险有效期：当次客车有效，被保险人以乘客身份乘坐从事合法商业运营的客车期间；（自持有效车票进入车厢时起，至抵达车票载明的终点离开所乘车车厢时止）\n
                4．	保险费：根据保险公司和车程行驶路程而定。\n
                5．	理赔：请致电中国平安保险公司客服（95511）办理\n
    </string>
    <string name="notice_title">购票须知</string>
    <string name="notice">
                购票，取票，退票须知：\n
                1．	微风出行目前可购买全价票，成人及身高超过1.5米的儿童需购买全价票。暂不可购买儿童票和优惠价格车票，您如需购买儿童票和优惠价格车票，请到当地车站购买。\n
                2．	微风出行不售免费携带儿童票，如果您需要携带1.20米以下儿童乘车，请到当地车站购买免费携带儿童票。\n
                3．	您可在微风出行网买【乘车意外险】。购买保险需凭乘车人二代身份证，投保成功后，保险公司将电子单号发送到取票人手机号上，电子保单和纸质保单同样具有法律效力。乘车站及微风出行网不提供纸质单。\n
                4．	请您在规定时间内完成支付，如支付超时，订单将自动取消。\n
                5．	购票高峰期可能出现因余票不足，产生款已支付购票不成功的情况，所支付款项将退回到您的微风平台账户，您可以使用账户余额继续购票或退回原支付账户，票款将会在1-10个工作日返回到您的支付账号。\n
                6．	网上购票暂不支持网上改签，网上退票功能将在发车时刻前2小时关闭，关闭之后只能到始发站办理退票手续。\n
                7．	请您预留充足的时间前往车站凭取票证件办理取票，如超过发车时间仍未取票，微风出行网不承担责任。\n
                8．	班次信息由客运站提供，实际发车以客运站信息为准。\n
                9．	购票成功后，请您尽早办理取票事宜。如无法正常取票，请及时拨打微风出行客服热线：\n 028-61039462
    </string>
    <string name="tips_info_content_service">
        服务费：服务费包括支付手续费，短信费，技术接入费；如产生退票，服务费不退。
    </string>

    <!-- login -->
    <string name="header_title">登录</string>
    <string name="login_reg">注册</string>
    <string name="login_fogot_pwd">重置密码</string>
    <string name="login_reg_fogot">忘记密码?</string>
    <string name="login_button_reg">注册并且登录</string>
    <string name="login_button_rest">确认</string>
    <string name="login_reg_code">获取验证码</string>
    <string name="login_reg_code_hint">输入验证码</string>
    <string name="login_reg_code_empty">验证码为空</string>
    <string name="login_reg_code_isequals">验证码错误</string>
    <string name="login_phone_hint">输入手机号码</string>
    <string name="login_pwd_hint">输入密码</string>
    <string name="login_phone_empty">手机号码不能为空</string>
    <string name="login_phone_ok">输入正确的手机号码</string>
    <string name="login_pwd_empty">密码不能为空</string>
    <string name="login_pwd_length">密码长度不能小于6位</string>

    <!-- menu -->
    <string name="main_rdo_ticket">购票</string>
    <string name="main_rdo_order">订单</string>
    <string name="main_rdo_my">我的</string>
    <string name="main_rdo_home">首页</string>

    <string name="start_city">出发城市</string>
    <string name="end_city">到达城市</string>
    <string name="start_tip_city">选择开始城市</string>
    <string name="end_tip_city">选择到达城市</string>
    <string name="tip_city_name">输入城市名字</string>
    <string name="start_time">出发时间</string>
    <string name="tip_start_time">请选择出发时间</string>
    <string name="see_frequency">查看班次</string>
    <string name="time_day_pre">前一天</string>
    <string name="time_day_next">后一天</string>

    <string name="write_order_title">填写订单</string>
    <string name="order_detail_title">订单详情</string>
    <string name="submit_order_title">提交订单</string>
    <string name="custom_title">乘客</string>
    <string name="add_custom_title">添加乘客</string>

    <string name="passenger_name">姓名</string>
    <string name="passenger_mobile">手机号</string>
    <string name="passenger_idcard">身份证</string>
    <string name="add_ok">确认添加</string>

    <string name="time_ok">完成</string>
    <string name="t_cancel">取消</string>


    <!-- PayActivity -->
    <string name="app_tip">提示</string>
    <string name="pay_by_wx">通过微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string-array name="spinedays">
        <item>第1天</item>
        <item>第2天</item>
        <item>第3天</item>
        <item>第4天</item>
        <item>第5天</item>
    </string-array>
</resources>
