<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_text_color"
    android:paddingTop="@dimen/common_padding"
    android:paddingLeft="@dimen/common_padding"
    android:paddingRight="@dimen/common_padding"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <FrameLayout
        android:id="@+id/fl_login_content"
        android:layout_below="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/login_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_user_phone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/login_phone_hint"
                android:singleLine="true"
                android:maxLength="11"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint"
                android:background="@null"
                android:inputType="number" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#999999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_verifyCode"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="55dp"
                    android:inputType="number"
                    android:background="@null"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color_hint"
                    android:hint="@string/login_reg_code_hint" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/text_color_hint" />

                <Button
                    android:id="@+id/btn_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/login_reg_code"
                    android:textColor="@color/button_text_color"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/text_color_hint" />

            <EditText
                android:id="@+id/ed_user_pwd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint"
                android:background="@null"
                android:password="true"
                android:singleLine="true"
                android:maxLength="16"
                android:hint="@string/login_pwd_hint" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:layout_below="@+id/fl_login_content"
        android:layout_width="match_parent"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        android:layout_height="44dp"
        android:text="@string/login_button_rest" />

</RelativeLayout>