<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingTop="@dimen/common_padding"
    android:paddingLeft="@dimen/common_padding"
    android:paddingRight="@dimen/common_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_header_text"
        style="@style/header_title"
        android:text="@string/header_title"
    />

    <FrameLayout
        android:id="@+id/fl_login_content"
        android:layout_below="@+id/tv_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@drawable/login_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/ed_user_phone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/login_phone_hint"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint"
                android:background="@null"
                android:inputType="number"
                android:maxLength="11"
            />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999999"
                />
            <EditText
                android:id="@+id/ed_user_pwd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color_hint"
                android:background="@null"
                android:singleLine="true"
                android:password="true"
                android:maxLength="16"
                android:hint="@string/login_pwd_hint"
                />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/fl_btn_submit"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/fl_login_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/login_button"
        android:clickable="true"
        >
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:textColor="@color/button_text_color"
            android:textSize="32sp"
            android:layout_height="44dp"
            android:background="@null"
            android:clickable="false"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/login"
            android:clickable="false"
        />
    </FrameLayout>
    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_reg_fogot"
        android:layout_below="@+id/fl_btn_submit"
        android:layout_alignParentLeft="true"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="20dp" />
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_reg"
        android:layout_below="@+id/fl_btn_submit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginRight="34dp"
        android:layout_marginTop="20dp" />
</RelativeLayout>