<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_text_color"
        android:paddingLeft="@dimen/common_padding"
        android:paddingRight="@dimen/common_padding">

        <include layout="@layout/header" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_padding"
        android:paddingRight="@dimen/common_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passenger_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_passName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:text="阮康焕"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_color_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passenger_mobile"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passenger_mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:text="13988888888"
                android:textColor="@color/text_color"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_color_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passenger_idcard"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passenger_idcard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:text="621022197604288516"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_color_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_passenger"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/common_padding"
        android:layout_marginRight="@dimen/common_padding"
        android:layout_marginTop="50dp"
        android:background="@drawable/frequency_button"
        android:gravity="center"
        android:text="@string/add_ok"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>